--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <div class="ciculoApresentacao circulo1">
                 <!-- circulo -->
                 <figure>
-                    <img class="ciculoApresentacao__img" src="/src/pedra.png" alt="pedra" id="playIA">
+                    <img class="ciculoApresentacao__img" src="./src/pedra.png" alt="pedra" id="playIA">
                 </figure>
             </div>
             <div class="ciculoApresentacao circulo2">
                 <!-- circulo -->
                 <figure>
-                    <img class="ciculoApresentacao__img" src="/src/pedra.png" alt="pedra" id="playEU">
+                    <img class="ciculoApresentacao__img" src="./src/pedra.png" alt="pedra" id="playEU">
                 </figure>
             </div>
             <div class="placar__container">
@@ -46,19 +46,19 @@
         <div class=" flex-ciculoPequeno">
             <div class="ciculoApresentacao ciculoApresentacao--pequeno curculoPequeno__circulo1">
                 <figure>
-                    <img class="ciculoApresentacao__img select_player" src="/src/pedra.png" alt="pedra">
+                    <img class="ciculoApresentacao__img select_player" src="./src/pedra.png" alt="pedra">
                 </figure>
                 <!-- circuloPequeno -->
             </div>
             <div class="ciculoApresentacao ciculoApresentacao--pequeno curculoPequeno__circulo2">
                 <figure>
-                    <img class="ciculoApresentacao__img select_player" src="/src/papel.png" alt="papel">
+                    <img class="ciculoApresentacao__img select_player" src="./src/papel.png" alt="papel">
                 </figure>
                 <!-- circuloPequeno -->
             </div>
             <div class="ciculoApresentacao ciculoApresentacao--pequeno curculoPequeno__circulo3">
                 <figure>
-                    <img class="ciculoApresentacao__img select_player" src="/src/tesoura.png" alt="tesoura">
+                    <img class="ciculoApresentacao__img select_player" src="./src/tesoura.png" alt="tesoura">
                 </figure>
                 <!-- circuloPequeno -->
             </div>
