--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 </figure>
             </div>
             <div class="placar__container">
-                <div class="placar">
+                <div class="placar placar__eu">
                     <span>Eu :</span>
                     <span id="placar__eu"> 0</span>
                 </div>
     
-                <div class="placar">
+                <div class="placar placar__ia">
                     <span>Ia :</span>
                     <span id="placar__ia">0</span>
                 </div>
@@ -44,9 +44,9 @@
         </div>
 
         <div class=" flex-ciculoPequeno">
-            <div class="ciculoApresentacao ciculoApresentacao--pequeno curculoPequeno__circulo1">
+            <div class="ciculoApresentacao ciculoApresentacao--pequeno curculoPequeno__circulo1 ativado">
                 <figure>
-                    <img class="ciculoApresentacao__img select_player" src="./src/pedra.png" alt="pedra">
+                    <img  class="ciculoApresentacao__img select_player" src="./src/pedra.png" alt="pedra">
                 </figure>
                 <!-- circuloPequeno -->
             </div>
@@ -57,6 +57,7 @@
                 <!-- circuloPequeno -->
             </div>
             <div class="ciculoApresentacao ciculoApresentacao--pequeno curculoPequeno__circulo3">
+
                 <figure>
                     <img class="ciculoApresentacao__img select_player" src="./src/tesoura.png" alt="tesoura">
                 </figure>
